chore(build): 迁移到 NeoForge 并清理配方文件，并未完全适配AE2
- 将 Forge 条件配方转换为 NeoForge 格式
- 移除已弃用的 Forge API 调用
- 更新模块加载上下文参数
- 删除不需要的配方文件
- 重命名配方文件路径结构
- 更新物品引用格式为 id 字段
- 修改 FarmBlock 属性初始化方法
- 清理 Git 忽略文件列表